@@ -72,8 +72,8 @@ class GTXConsole extends JFrame implements ActionListener{
 		resbundle = ResourceBundle.getBundle ("GuitarTeX2strings", Locale.getDefault());
 		
 		Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();
-		statusTop = new Double((screenSize.getHeight()/2) - (statusHeight/2)).intValue();
-		statusLeft = new Double((screenSize.getWidth()/2) - (statusWidth/2)).intValue();
+		statusTop = Double.valueOf((screenSize.getHeight()/2) - (statusHeight/2)).intValue();
+		statusLeft = Double.valueOf((screenSize.getWidth()/2) - (statusWidth/2)).intValue();
 		
 		this.setResizable(false);
 		
