@@ -53,8 +53,8 @@ public class StatusBox extends JFrame implements ActionListener {
 		resbundle = ResourceBundle.getBundle ("GuitarTeX2strings", Locale.getDefault());
 		
 		Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();
-		statusTop = new Double((screenSize.getHeight()/2) - (statusHeight/2)).intValue();
-		statusLeft = new Double((screenSize.getWidth()/2) - (statusWidth/2)).intValue();
+		statusTop = Double.valueOf((screenSize.getHeight()/2) - (statusHeight/2)).intValue();
+		statusLeft = Double.valueOf((screenSize.getWidth()/2) - (statusWidth/2)).intValue();
 		
 		this.setResizable(false);
 		
@@ -96,8 +96,8 @@ public class StatusBox extends JFrame implements ActionListener {
 	
 	public StatusBox(String myStatus) {
 		Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();
-		statusTop = new Double((screenSize.getHeight()/2) - (statusHeight/2)).intValue();
-		statusLeft = new Double((screenSize.getWidth()/2) - (statusWidth/2)).intValue();
+		statusTop = Double.valueOf((screenSize.getHeight()/2) - (statusHeight/2)).intValue();
+		statusLeft = Double.valueOf((screenSize.getWidth()/2) - (statusWidth/2)).intValue();
 		
 		this.setResizable(false);
 		
